--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -9,4 +9,11 @@
             android:gravity="center"
             android:src="@mipmap/launch_image" />
     </item> -->
+    <item>
+        <bitmap
+            android:scaleType="fitXY"
+            android:src="@mipmap/splashscreen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </item>
 </layer-list>
